# test_python_fastapi

./: .devcontainer  .dockerignore  .env.example  .github  .gitignore  Dockerfile  MIGRATION_TO_UV.md  QUICK_CI_CD_TEST.md  README.md  docker-compose  justfile  logger.py  main.py  pyproject.toml  requirements.txt  run.py  run_app.sh  setup_venv.sh  test_config.py  test_import.py  test_in_venv.sh  test_setting.py  test_venv.py
.devcontainer/: README.md  TROUBLESHOOTING.md  devcontainer.codespaces.json  devcontainer.json  devcontainer.prebuild.json  devcontainer.simple.json  install-just.sh  quick-setup.sh  setup.sh  start.sh  test-codespaces.sh  validate-fix.sh
.github/workflows/: cd-codespaces-simple.yml  cd-codespaces.yml  ci.yml  feature-ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_refactoring_suggestions.md  code_style_conventions.md  project_architecture.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
config/.devcontainer/: README.md  api-tests.http  devcontainer.json  docker-compose.codespaces.yml  setup.sh
config/github/.github/codespaces/: devcontainer.json
config/github/.github/workflows/: ci.yml
deploy/scripts/: run_app.sh  setup_venv.bat
docker/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
docs/: CD_DEPLOYMENT_SUMMARY.md  CI_CD_TESTING_GUIDE.md  CI_TESTING.md  CLEANUP_SUMMARY.md  CODESPACES_DEPLOYMENT.md  CODESPACES_DOCKER_CICD_SOLUTION.md  DOCKER_STRUCTURE.md  MIGRATION.md  NOTIFICATION_SYSTEM.md  PODMAN_SETUP.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_NEW.md  PROJECT_SUMMARY.md  README.md
requirements/: dev.txt  prod.txt
scripts/: diagnose-cicd-issues.sh  fix-just-install.sh  send-deployment-notification.sh  setup_venv.sh  test_api.py  test_ci_cd.sh  test_config.py  test_import.py  test_in_venv.sh  test_new_structure.py  test_setting.py  test_venv.py
src/: __init__.py
src/app/: __init__.py  main.py
src/app/database/: __init__.py  memory_db.py
src/app/models/: __init__.py  item.py  user.py
src/app/routers/: __init__.py  items.py  stats.py  users.py
src/app/services/: __init__.py  item_service.py  user_service.py
src/app/utils/: __init__.py  helpers.py  middleware.py
src/core/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_items.py  test_users.py
tools/: test_config.py  test_import.py
